--- a/_config.yml
+++ b/_config.yml
@@ -20,15 +20,15 @@ text_skin: "orange" # "default" (default), "dark", "forest", "ocean", "chocolate
 highlight_theme: "default" # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : https://dojenk.github.io
 baseurl : /
-title   : "dojenk.github.io"
+title   : "My {dojenk} personal site!"
 description: > # this means to ignore newlines until "Language & timezone"
   My {dojenk} personal site!
 
 
 ## => Language and Timezone
 ##############################
-lang: en # the language of your site, default as "en"
-timezone: US/Eastern # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for the available values
+lang: "en" # the language of your site, default as "en"
+timezone: "US/Eastern" # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for the available values
 
 
 ## => Author and Social
@@ -37,7 +37,7 @@ author:
   type      : # "person" (default), "organization"
   name      : Donny Jenkins
   url       :
-  avatar    : # path or url of avatar image (square)
+  avatar    : /assets/images/avatar/avatar.jpg # path or url of avatar image (square)
   bio       : Forever student
   email     :
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
